provarAnt/00D1b0000000d5bEAA/objects/Action_Plan__c.object
<CustomObject>
    <description>To be used for Performance/Account Management</description>
    <fields>
        <fullName>AC_DSM_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact the AC / DSM to review plan and account history (7 day deadline)</description>
        <inlineHelpText>Contact AC/DSM to review plan and account history - must complete in 7 days</inlineHelpText>
        <label>AC/DSM review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AC_Dealer_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact the AC or Dealer to review data from above</description>
        <inlineHelpText>Contact the AC or Dealer to review data</inlineHelpText>
        <label>AC/Dealer Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATC_Action_Plan_Type__c</fullName>
        <description>Type of Action Plan Record</description>
        <label>ATC Action Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>DSC Initial 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSC Maintain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Collection_Status__c</fullName>
        <formula>TEXT(Account__r.ATC_Collection_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATC Collection Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Consultant__c</fullName>
        <label>Account Consultant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Products__c</fullName>
        <label>ATC Products</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyscrapers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Security_Question__c</fullName>
        <formula>TEXT(Account__r.ATC_Security_Question__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATC Security Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Security_Response__c</fullName>
        <formula>Account__r.ATC_Security_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATC Security Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated by SVOC in the Account</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Dealership this Action Plan is related to.</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Unverified Prospect</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acquisition Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Name2__c</fullName>
        <description>field to capture the Action Plan Name for NADA</description>
        <label>Dealership Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Name__c</fullName>
        <formula>HYPERLINK(  &quot;/&quot;&amp;Id ,  RecordType.Name &amp;&quot; - &quot;&amp;  Account__r.Name,&quot;_self&quot; )</formula>
        <label>Action Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Owner__c</fullName>
        <label>Action Plan Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Result__c</fullName>
        <label>Action Plan Result</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Summary__c</fullName>
        <description>Used to display the action plan name as a link that returns to the visual force page.  This link will only appear on list views on the tradeshow user account.</description>
        <formula>HYPERLINK(&quot;/apex/ActionPlanCreate?id=&quot;+Id,  Trade_Show_Name__c+&quot; - &quot;+
 IF( ISBLANK (Account__r.Id), Action_Plan_Name2__c,  Account__r.Name), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Type__c</fullName>
        <description>this is a picklist field to indicate the type of customer for the action plan</description>
        <label>Action Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Churned Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Dealer_IDs__c</fullName>
        <label>Additional Dealer IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Days_since_Last_Engagement__c</fullName>
        <formula>CASE(MOD( Last_Account_Engagement__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( TODAY()  - Last_Account_Engagement__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 

  1 , CASE( MOD( TODAY()  - Last_Account_Engagement__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 

  2 , CASE( MOD( TODAY()  - Last_Account_Engagement__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 

  3 , CASE( MOD( TODAY()  - Last_Account_Engagement__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 

  4 , CASE( MOD( TODAY()  - Last_Account_Engagement__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 

  5 , CASE( MOD( TODAY()  - Last_Account_Engagement__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 

  6 , CASE( MOD( TODAY()  - Last_Account_Engagement__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 

  999) 

  + 

  (FLOOR(( TODAY() - Last_Account_Engagement__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days since Last Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_Certified__c</fullName>
        <label>Call Tracking Certified</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_New__c</fullName>
        <label>Call Tracking New</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_Used__c</fullName>
        <label>Call Tracking Used</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Inventory__c</fullName>
        <label>Classified Inventory</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Visible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Visible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Click_Through__c</fullName>
        <label>Click-Through</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Analysis_or_VDP_MapPoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Analysis or VDP MapPoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_MAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete MAP - 90 day touchpoint</description>
        <inlineHelpText>Complete MAP</inlineHelpText>
        <label>Complete MAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Ads__c</fullName>
        <description>Dependent on Selection of ATC Makes</description>
        <label>Confirm Ads</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirm_Map_Coordinates__c</fullName>
        <label>Confirm Map Coordinates</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultation_Attendee_Title__c</fullName>
        <label>Attendee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultation_Attendee__c</fullName>
        <label>Consultation Attendee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <label>Other Contact Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DealShield__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DealShield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer 360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Rater_Customer__c</fullName>
        <label>Dealer Rater Customer</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Scorecard_New_Car_Sum_Local_Mkt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dealer Scorecard / New Car Market Summary / Local Market Sheet</description>
        <inlineHelpText>Dealer Scorecard / New Car Market Summary / Local Market Sheet</inlineHelpText>
        <label>Dealer Scorecard/New Car Sum/Local Mkt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Chat__c</fullName>
        <label>Dealer Site Chat</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Provisioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Provisioned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Inventory_Comments__c</fullName>
        <label>Dealer Site Inventory Comments</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Inventory_Count__c</fullName>
        <label>Dealer Site Inventory Count</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Inventory_Photos__c</fullName>
        <label>Dealer Site Inventory Photos</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Inventory_Pricing__c</fullName>
        <label>Dealer Site Inventory Pricing</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site_Inventory__c</fullName>
        <label>Dealer Site Inventory</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Inventory Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Tagline_Verified__c</fullName>
        <label>Dealer Tagline Verified</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <formula>TEXT(Account__r.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Goals__c</fullName>
        <label>Dealership Goals:</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Logo__c</fullName>
        <label>Dealership Logo</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Photos__c</fullName>
        <label>Dealership Photos</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Videos__c</fullName>
        <label>Dealership Videos</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Audience_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Audience Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussion_Date__c</fullName>
        <label>Discussion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Account__r.SVOC_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elite_Ad_Clickthrough__c</fullName>
        <description>Dependent on KBB Product Type</description>
        <label>Elite Ad Clickthrough</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elite_Ad_Visible__c</fullName>
        <description>Dependent on KBB Product Type</description>
        <label>Elite Ad Visible</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FDPQ_Confirmed__c</fullName>
        <label>FDPQ Confirmed</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPP_Meter__c</fullName>
        <label>FPP Meter</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_I_Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F &amp; I Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End_Fundamentals_of_Top_Dealership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front End Fundamentals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GO_Financial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GO Financial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeNet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomeNet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation_Verified__c</fullName>
        <label>Hours of Operation Verified</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Your_Dealership_is_Doing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How Your Dealership is Doing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Resolution__c</fullName>
        <description>IC Resolution for TIM Action plans</description>
        <inlineHelpText>IC resolution for TIM Action plans</inlineHelpText>
        <label>IC Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>TIM - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Sale Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Sale Not Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Dealer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Dealer Handling Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-No Response Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-No Response Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Vendor Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Delivery_Call_Completed__c</fullName>
        <label>Initial Delivery Call Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Input_Setup_Comments__c</fullName>
        <label>Input/Setup Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBB_CPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB CPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_Classified_Comments__c</fullName>
        <label>KBB Classified Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBB_Elite_Comments__c</fullName>
        <label>KBB Elite Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBB_Highlight_Comments__c</fullName>
        <label>KBB Highlight Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBB_Products__c</fullName>
        <label>KBB Products</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Showcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Dealer price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Showcase_Comments__c</fullName>
        <label>KBB Showcase Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealertrack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Account_Engagement__c</fullName>
        <label>Last Account Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Account_Review__c</fullName>
        <label>Last Account Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learn_How_Consumers_Really_Shop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Learn How Consumers Really Shop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listing_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ListingLogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Market_Sheets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Market Sheets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locate_Dealer_Confirmed__c</fullName>
        <label>Locate Dealer Confirmed</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete MAP, review merchandising scores, and make proactive updates</description>
        <inlineHelpText>Complete MAP, review merchandising scores, make proactive updates</inlineHelpText>
        <label>MAP Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAP_Reporting_portion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete reporting portion of MAP (no audit)</description>
        <inlineHelpText>Complete reporting portion of MAP (no audit)</inlineHelpText>
        <label>MAP Reporting portion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_My_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MakeMyDeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manheim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manheim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_Info__c</fullName>
        <label>Map Info</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merch_Scores_Review_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review merchandising scores and make proactive updates</description>
        <inlineHelpText>Review merchandising scores and make proactive updates</inlineHelpText>
        <label>Merch Scores Review/Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merch_Scores_VDP_Vec_Activity_Imp_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review Merchandising Scores and VDP/Vehicle activity to check for improvement/impact</description>
        <inlineHelpText>Review Merchandising Scores and VDP/Vehicle activity to check for improvement/impact</inlineHelpText>
        <label>Merch Scores/VDP/Vec Activity Imp Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merch_Scores_VDP_Vehicle_Activity_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review Merchandising scores and VDP/Vehicle activity to check for improvement/impact</description>
        <inlineHelpText>Review Merchandising scores and VDP/Vehicle activity to check for improvement/impact</inlineHelpText>
        <label>Merch Scores/VDP/Vehicle Activity Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandising_Score_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review Merchandising Scores and make proactive updates</description>
        <inlineHelpText>Review Merchandising Scores and make proactive updates</inlineHelpText>
        <label>Merchandising Score Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Email_Address__c</fullName>
        <label>New Email Address</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Scorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextGear_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NextGear Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Meeting__c</fullName>
        <label>Next Scheduled Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_Recommendations__c</fullName>
        <label>Notes &amp; Recommendations:</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Photos__c</fullName>
        <label>Number of Photos</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>over 50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Reports_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Requested_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_What_s_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name_Concatenate__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name Concatenate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Owner:User.Id , Owner_Name_Concatenate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
</CustomObject>